Updated Contact Section

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="skills-list flex-row large-gap">
             <div class="skills-column-1">
               <ul class="custom-list underline-link">
-                <li><a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and JavaScript certified</li>
+                <li>Certified <a href="https://verify.w3schools.com/1O963J2W5L" target="_blank">Frontend Developer</a>, including <a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and <a href="https://verify.w3schools.com/1O963ITIZN" target="_blank">JavaScript</a></li>
                 <li>WordPress and Visual Page Builders (Elementor and WP Bakery)</li>
                 <li>Bash / Linux Terminal</li>
                 <li>Git / GitHub Version Control</li>
@@ -290,19 +290,32 @@
       <section class="quote no-bottom-padding">
         <div class="inner-container max-width">
           <div class="quote-body flex-column large-gap">
-            <p class="outline-text-large">"Kyle is extremely organized, professional, and a master at his craft. From <span class="green-accent">front-end development</span> to design, Kyle is an asset to any team and a genuine pleasure to work with!"</p>
+            <p class="outline-text-large">"Kyle is extremely organized, professional, and a master at his craft. From <span class="green-accent">frontend development</span> to design, Kyle is an asset to any team and a genuine pleasure to work with!"</p>
             <div class="quote-attribution light-font">
               <p>Steven Howsley, Marketing Analyst, REI</p>
             </div>
           </div>
         </div>
       </section>
+      <section class="image-separator-right">
+        <div class="inner-container">
+          <div class="image-separator-bg">
+            <figure>
+              <img src="./images/values-exercise.jpg" alt="Kyle Chin Participating in Business Values and Strategy Exercise" width="1440" height="auto" />
+            </figure>
+
+            <div class="photo-attribution-left vertical flex-column">
+              <p>Photo by <a href="https://www.arieljordanphoto.com/" target="_blank">Ariel Jordan</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="contact" id="contact">
-        <div class="inner-container small-width flex-column small-gap">
+        <div class="inner-container max-width flex-row small-gap">
           <div class="heading-and-description flex-column small-gap">
-            <h2 class="primary-h2 white">Hire Me</h2>
+            <h2 class="primary-h2 white">Let's Talk</h2>
             <div class="large-text underline-link">
-              <p>If you're interested in starting a website project, please fill out the form below with your project requirements and completed <a href="./docs/company-name-discovery-questionnaire.docx" target="_blank">discovery questionnaire</a>.</p>
+              <p>If you're interested in starting a website project, please fill out the form below and include your requirements. I am open to contract work (strategy, design, development, or website maintenance) and full-time agency or studio employment.</p>
             </div>
           </div>
           <div class="form-wrapper small-gap">
@@ -313,8 +326,6 @@
               <input type="tel" name="phone" id="phone" placeholder="Phone" />
               <input type="url" name="website" id="website" placeholder="Website" />
               <textarea name="message" id="message" cols="30" rows="10" placeholder="Tell me about your website goals, budget, and anything other pertinent details."></textarea>
-              <label for="file-upload">Completed Discovery Questionnaire</label>
-              <input type="file" name="file-upload" id="file-upload" required />
               <input type="submit" value="Submit" />
             </form>
           </div>
