Finalized Contact Section

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           </div>
         </div>
       </section>
-      <section class="quote no-bottom-padding">
+      <section class="quote">
         <div class="inner-container max-width">
           <div class="quote-body flex-column large-gap">
             <p class="outline-text-large">"Kyle is extremely organized, professional, and a master at his craft. From <span class="green-accent">frontend development</span> to design, Kyle is an asset to any team and a genuine pleasure to work with!"</p>
@@ -311,11 +311,11 @@
         </div>
       </section>
       <section class="contact" id="contact">
-        <div class="inner-container max-width flex-row small-gap">
-          <div class="heading-and-description flex-column small-gap">
+        <div class="inner-container flex-column flex-row-desktop large-gap">
+          <div class="heading-and-description flex-column x-small-gap">
             <h2 class="primary-h2 white">Let's Talk</h2>
             <div class="large-text underline-link">
-              <p>If you're interested in starting a website project, please fill out the form below and include your requirements. I am open to contract work (strategy, design, development, or website maintenance) and full-time agency or studio employment.</p>
+              <p>I am open to contract work (strategy, design, development, or website maintenance) and full-time agency or studio employment.</p>
             </div>
           </div>
           <div class="form-wrapper small-gap">
