Updated Contact Image

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="inner-container">
           <div class="image-separator-bg">
             <figure>
-              <img src="./images/values-exercise.jpg" alt="Kyle Chin Participating in Business Values and Strategy Exercise" width="1440" height="auto" />
+              <img src="./images/kyle-headshot.jpg" alt="Kyle Chin Headshot" width="1440" height="auto" />
             </figure>
 
             <div class="photo-attribution-left vertical flex-column">
