Updated Image Separators

--- a/index.html
+++ b/index.html
@@ -89,13 +89,9 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-right">
+      <section class="image-separator-right hero-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
-            <figure>
-              <img src="./images/values-exercise.jpg" alt="Kyle Chin Participating in Business Values and Strategy Exercise" width="1440" height="auto" />
-            </figure>
-
             <div class="photo-attribution-left vertical flex-column">
               <p>Photo by <a href="https://www.arieljordanphoto.com/" target="_blank">Ariel Jordan</a></p>
             </div>
@@ -133,13 +129,9 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-left">
+      <section class="image-separator-left about-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
-            <figure>
-              <img src="./images/business-strategy.jpg" alt="Whiteboard Website Strategy Session" width="1440" height="auto" />
-            </figure>
-
             <div class="photo-attribution-right vertical flex-column">
               <p>
                 Photo by <a href="https://unsplash.com/@kaleidico?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Kaleidico</a> on
@@ -160,7 +152,10 @@
           <div class="skills-list flex-row large-gap">
             <div class="skills-column-1">
               <ul class="custom-list underline-link">
-                <li>Certified <a href="https://verify.w3schools.com/1O963J2W5L" target="_blank">Frontend Developer</a>, including <a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and <a href="https://verify.w3schools.com/1O963ITIZN" target="_blank">JavaScript</a></li>
+                <li>
+                  Certified <a href="https://verify.w3schools.com/1O963J2W5L" target="_blank">Frontend Developer</a>, including <a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and
+                  <a href="https://verify.w3schools.com/1O963ITIZN" target="_blank">JavaScript</a>
+                </li>
                 <li>WordPress and Visual Page Builders (Elementor and WP Bakery)</li>
                 <li>Bash / Linux Terminal</li>
                 <li>Git / GitHub Version Control</li>
@@ -178,19 +173,19 @@
       </section>
       <section class="hexagon-divider no-bottom-padding">
         <div class="inner-container large-width flex-column flex-row-tablet large-gap">
-          <div class="hexagon-statistic hexagon-green">
+          <div class="hexagon-statistic-bg hexagon-green">
             <figure>
               <img src="./images/hexagon-green-border.svg" alt="Green Border Hexagon" />
               <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
             </figure>
           </div>
-          <div class="hexagon-statistic hexagon-white">
+          <div class="hexagon-statistic-bg hexagon-white">
             <figure>
               <img src="./images/hexagon-white.svg" alt="White Hexagon" />
               <p class="hexagon-statistic-description"><span class="statistic-number">10</span> Years of Experience</p>
             </figure>
           </div>
-          <div class="hexagon-statistic hexagon-black">
+          <div class="hexagon-statistic-bg hexagon-black">
             <figure>
               <img src="./images/hexagon-black.svg" alt="Black Hexagon" />
               <p class="hexagon-statistic-description"><span class="statistic-number">6</span> Developer Certifications</p>
@@ -297,13 +292,9 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-right">
+      <section class="image-separator-right quote-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
-            <figure>
-              <img src="./images/kyle-headshot.jpg" alt="Kyle Chin Headshot" width="1440" height="auto" />
-            </figure>
-
             <div class="photo-attribution-left vertical flex-column">
               <p>Photo by <a href="https://www.arieljordanphoto.com/" target="_blank">Ariel Jordan</a></p>
             </div>
@@ -311,7 +302,7 @@
         </div>
       </section>
       <section class="contact" id="contact">
-        <div class="inner-container flex-column flex-row-desktop large-gap">
+        <div class="inner-container flex-column flex-row-desktop x-large-gap">
           <div class="heading-and-description flex-column x-small-gap">
             <h2 class="primary-h2 white">Let's Talk</h2>
             <div class="large-text underline-link">
