Added Custom List Markers

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               </ul>
             </div>
             <div class="skills-column-2">
-              <ul class="custom-list">
+              <ul class="custom-list underline-link">
                 <li>FTP, cPanel, SMTP, and DNS</li>
                 <li>Photoshop, Illustrator, Sketch, and Figma</li>
                 <li>Google Analytics, Search Console, and Tag Manager</li>
