Turned Work Featured Images into BG Images

--- a/index.html
+++ b/index.html
@@ -198,11 +198,7 @@
           <h2 class="outline-heading-large">Work</h2>
           <div class="select-work flex-column">
             <article class="flex-column">
-              <div class="select-work-featured-img">
-                <figure>
-                  <img src="./images/snowboarder.jpg" alt="Burton Snowboarder on Mountain" />
-                </figure>
-
+              <div class="select-work-featured-bg project-1">
                 <div class="photo-attribution-right vertical flex-column">
                   <p>
                     Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">MSR</a> on
@@ -226,10 +222,7 @@
               </div>
             </article>
             <article class="flex-column">
-              <div class="select-work-featured-img">
-                <figure>
-                  <img src="./images/home-exterior.jpg" alt="Custom Home Exterior" />
-                </figure>
+              <div class="select-work-featured-bg project-2">
                 <div class="photo-attribution-right vertical flex-column">
                   <p>
                     Photo by <a href="https://unsplash.com/@flopt?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Flo Pappert</a> on
@@ -253,10 +246,7 @@
               </div>
             </article>
             <article class="flex-column">
-              <div class="select-work-featured-img">
-                <figure>
-                  <img src="./images/weight-training.jpg" alt="Working Out" />
-                </figure>
+              <div class="select-work-featured-bg project-3">
                 <div class="photo-attribution-right vertical flex-column">
                   <p>
                     Photo by <a href="https://unsplash.com/@visualsbyroyalz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">AM</a> on
