Updated Cards and Hexagons

--- a/index.html
+++ b/index.html
@@ -174,10 +174,11 @@
       <section class="hexagon-divider no-bottom-padding">
         <div class="inner-container large-width flex-column flex-row-tablet large-gap">
           <div class="hexagon-statistic-bg hexagon-green">
-            <figure>
+            <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
+
+            <!-- <figure>
               <img src="./images/hexagon-green-border.svg" alt="Green Border Hexagon" />
-              <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
-            </figure>
+            </figure> -->
           </div>
           <div class="hexagon-statistic-bg hexagon-white">
             <figure>
