Updated Hexagon Statistics

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-right hero-separator">
+      <div class="image-separator-right hero-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
             <div class="photo-attribution-left vertical flex-column">
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <section class="about no-bottom-padding" id="about">
         <div class="inner-container medium-width">
           <h2 class="primary-h2 white">Hey There</h2>
@@ -129,7 +129,7 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-left about-separator">
+      <div class="image-separator-left about-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
             <div class="photo-attribution-right vertical flex-column">
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <section class="skills no-bottom-padding" id="skills">
         <div class="inner-container large-width flex-row flex-column-mobile justify-space-between large-gap">
           <div class="heading-with-cta">
@@ -174,11 +174,10 @@
       <section class="hexagon-divider no-bottom-padding">
         <div class="inner-container large-width flex-column flex-row-tablet large-gap">
           <div class="hexagon-statistic-bg hexagon-green">
-            <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
-
-            <!-- <figure>
+            <figure>
               <img src="./images/hexagon-green-border.svg" alt="Green Border Hexagon" />
-            </figure> -->
+              <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
+            </figure>
           </div>
           <div class="hexagon-statistic-bg hexagon-white">
             <figure>
@@ -283,7 +282,7 @@
           </div>
         </div>
       </section>
-      <section class="image-separator-right quote-separator">
+      <div class="image-separator-right quote-separator">
         <div class="inner-container">
           <div class="image-separator-bg">
             <div class="photo-attribution-left vertical flex-column">
@@ -291,7 +290,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <section class="contact" id="contact">
         <div class="inner-container flex-column flex-row-desktop x-large-gap">
           <div class="heading-and-description flex-column x-small-gap">
@@ -301,7 +300,7 @@
             </div>
           </div>
           <div class="form-wrapper small-gap">
-            <form action="thank-you.html" method="post" class="contact-form display-grid" id="contact">
+            <form action="thank-you.html" method="post" class="contact-form display-grid" id="contact-form">
               <input type="text" name="first-name" id="firstName" placeholder="First Name" required />
               <input type="text" name="last-name" id="lastName" placeholder="Last Name" required />
               <input type="email" name="email" id="email" placeholder="Email" required />
