Started Building Footer

--- a/index.html
+++ b/index.html
@@ -313,8 +313,15 @@
         </div>
       </section>
       <script src="script.js"></script>
-      <footer>
-        <div class="inner-container max-width"></div>
+      <footer class="primary-footer">
+        <div class="inner-container max-width flex-row large-gap">
+          <div class="top-half">
+
+          </div>
+          <div class="bottom-half">
+
+          </div>
+        </div>
       </footer>
     </main>
   </body>
