Update Footer Spacing

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             </div>
             <div class="footer-navigation flex flex-row">
               <nav class="primary-footer-nav">
-                <ul class="flex flex-row flex-wrap x-small-gap">
+                <ul class="flex flex-row flex-wrap small-gap">
                   <li><a href="#about">About</a></li>
                   <li><a href="#skills">Skills</a></li>
                   <li><a href="#work">Work</a></li>
