--- a/index.html
+++ b/index.html
@@ -312,7 +312,6 @@
           </div>
         </div>
       </section>
-      <script src="script.js"></script>
       <footer class="primary-footer">
         <div class="inner-container max-width flex flex-column large-gap">
           <div class="top-half full-width flex flex-row flex-wrap justify-space-between large-gap">
@@ -332,7 +331,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="social-icons full-width flex flex-row x-small-gap">
+            <div class="social-icons full-width flex flex-row">
               <div class="footer-social-icon github">
                 <a href="https://github.com/kjc33" target="_blank"><i class="fa-brands fa-github"></i></a>
               </div>
@@ -346,11 +345,12 @@
               <p>I make every effort to ensure my portfolio is accessible to everyone. If you're having trouble using any part of my website, please don't hesitate to <a href="#contact">contact</a> me, and I will do my best to address the issue. Thank you for your understanding.</p>
             </div>
             <div class="accessibility-disclaimer">
-              <p>&copy; 2023 Kyle John Chin. <span>|</span> Website by me, duh.</p>
+              <p>&copy; <span id="copyright-year"></span> Kyle John Chin <span class="pipe">|</span> Website by me, duh.</p>
             </div>
           </div>
         </div>
       </footer>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
